// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addNewWish should create new wish row in the wishes table 1`] = `
"{
  \\"rooms\\": [],
  \\"users\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"email\\": \\"420@chill.com\\",
      \\"username\\": null
    }
  ],
  \\"sessions\\": [],
  \\"wishes\\": [],
  \\"authRequests\\": [
    {
      \\"token\\": \\"x420@chill.comxx\\",
      \\"email\\": \\"420@chill.com\\"
    }
  ]
}"
`;

exports[`addNewWish should create new wish row in the wishes table 2`] = `
"{
  \\"rooms\\": [],
  \\"users\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"email\\": \\"420@chill.com\\",
      \\"username\\": null
    }
  ],
  \\"sessions\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"cookie\\": \\"xx420@chill.comxxx\\"
    }
  ],
  \\"wishes\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"wishId\\": \\"xFooxxxx\\",
      \\"title\\": \\"Foo\\",
      \\"description\\": \\"Bar\\",
      \\"isPublic\\": true
    }
  ],
  \\"authRequests\\": []
}"
`;

exports[`addUserToRoom should add user to room 1`] = `
"{
  \\"rooms\\": [
    {
      \\"creatorId\\": \\"x420@chill\\",
      \\"roomId\\": \\"xDoobkiRoomx\\",
      \\"roomName\\": \\"DoobkiRoom\\",
      \\"users\\": [
        \\"x420@chill\\"
      ]
    }
  ],
  \\"users\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"email\\": \\"420@chill.com\\",
      \\"username\\": \\"Vasiliy\\"
    },
    {
      \\"userId\\": \\"xbumpie@gm\\",
      \\"email\\": \\"bumpie@gmail.com\\",
      \\"username\\": \\"bumpie\\"
    }
  ],
  \\"sessions\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"cookie\\": \\"xx420@chill.comxxx\\"
    },
    {
      \\"userId\\": \\"xbumpie@gm\\",
      \\"cookie\\": \\"xxbumpie@gmail.cox\\"
    }
  ],
  \\"wishes\\": [],
  \\"authRequests\\": []
}"
`;

exports[`addUserToRoom should add user to room 2`] = `
"{
  \\"rooms\\": [
    {
      \\"creatorId\\": \\"x420@chill\\",
      \\"roomId\\": \\"xDoobkiRoomx\\",
      \\"roomName\\": \\"DoobkiRoom\\",
      \\"users\\": [
        \\"x420@chill\\",
        \\"xbumpie@gm\\"
      ]
    }
  ],
  \\"users\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"email\\": \\"420@chill.com\\",
      \\"username\\": \\"Vasiliy\\"
    },
    {
      \\"userId\\": \\"xbumpie@gm\\",
      \\"email\\": \\"bumpie@gmail.com\\",
      \\"username\\": \\"bumpie\\"
    }
  ],
  \\"sessions\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"cookie\\": \\"xx420@chill.comxxx\\"
    },
    {
      \\"userId\\": \\"xbumpie@gm\\",
      \\"cookie\\": \\"xxbumpie@gmail.cox\\"
    }
  ],
  \\"wishes\\": [],
  \\"authRequests\\": []
}"
`;

exports[`authoriseUser should delete authorise request and create user session 1`] = `
"{
  \\"rooms\\": [],
  \\"users\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"email\\": \\"420@chill.com\\",
      \\"username\\": null
    }
  ],
  \\"sessions\\": [],
  \\"wishes\\": [],
  \\"authRequests\\": [
    {
      \\"token\\": \\"x420@chill.comxx\\",
      \\"email\\": \\"420@chill.com\\"
    }
  ]
}"
`;

exports[`authoriseUser should delete authorise request and create user session 2`] = `
"{
  \\"rooms\\": [],
  \\"users\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"email\\": \\"420@chill.com\\",
      \\"username\\": null
    }
  ],
  \\"sessions\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"cookie\\": \\"xx420@chill.comxxx\\"
    }
  ],
  \\"wishes\\": [],
  \\"authRequests\\": []
}"
`;

exports[`createMagicId should create new user entity it doesn't exist 1`] = `
"{
  \\"rooms\\": [],
  \\"users\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"email\\": \\"420@chill.com\\",
      \\"username\\": null
    }
  ],
  \\"sessions\\": [],
  \\"wishes\\": [],
  \\"authRequests\\": [
    {
      \\"token\\": \\"x420@chill.comxx\\",
      \\"email\\": \\"420@chill.com\\"
    }
  ]
}"
`;

exports[`createRoom should create new room in database 1`] = `
"{
  \\"rooms\\": [],
  \\"users\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"email\\": \\"420@chill.com\\",
      \\"username\\": null
    }
  ],
  \\"sessions\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"cookie\\": \\"xx420@chill.comxxx\\"
    }
  ],
  \\"wishes\\": [],
  \\"authRequests\\": []
}"
`;

exports[`createRoom should create new room in database 2`] = `
"{
  \\"rooms\\": [
    {
      \\"creatorId\\": \\"x420@chill\\",
      \\"roomId\\": \\"xDoobkiRoomx\\",
      \\"roomName\\": \\"DoobkiRoom\\",
      \\"users\\": [
        \\"x420@chill\\"
      ]
    }
  ],
  \\"users\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"email\\": \\"420@chill.com\\",
      \\"username\\": null
    }
  ],
  \\"sessions\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"cookie\\": \\"xx420@chill.comxxx\\"
    }
  ],
  \\"wishes\\": [],
  \\"authRequests\\": []
}"
`;

exports[`deleteWish should delete wish row from wishes table 1`] = `
"{
  \\"rooms\\": [],
  \\"users\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"email\\": \\"420@chill.com\\",
      \\"username\\": null
    }
  ],
  \\"sessions\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"cookie\\": \\"xx420@chill.comxxx\\"
    }
  ],
  \\"wishes\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"wishId\\": \\"xFooxxxx\\",
      \\"title\\": \\"Foo\\",
      \\"description\\": \\"Bar\\",
      \\"isPublic\\": true
    }
  ],
  \\"authRequests\\": []
}"
`;

exports[`deleteWish should delete wish row from wishes table 2`] = `
"{
  \\"rooms\\": [],
  \\"users\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"email\\": \\"420@chill.com\\",
      \\"username\\": null
    }
  ],
  \\"sessions\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"cookie\\": \\"xx420@chill.comxxx\\"
    }
  ],
  \\"wishes\\": [],
  \\"authRequests\\": []
}"
`;

exports[`editWish should edit wish row 1`] = `
"{
  \\"rooms\\": [],
  \\"users\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"email\\": \\"420@chill.com\\",
      \\"username\\": null
    }
  ],
  \\"sessions\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"cookie\\": \\"xx420@chill.comxxx\\"
    }
  ],
  \\"wishes\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"wishId\\": \\"xFooxxxx\\",
      \\"title\\": \\"Foo\\",
      \\"description\\": \\"Bar\\",
      \\"isPublic\\": true
    }
  ],
  \\"authRequests\\": []
}"
`;

exports[`editWish should edit wish row 2`] = `
"{
  \\"rooms\\": [],
  \\"users\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"email\\": \\"420@chill.com\\",
      \\"username\\": null
    }
  ],
  \\"sessions\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"cookie\\": \\"xx420@chill.comxxx\\"
    }
  ],
  \\"wishes\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"wishId\\": \\"xFooxxxx\\",
      \\"title\\": \\"four\\",
      \\"description\\": \\"twenty\\",
      \\"isPublic\\": true
    }
  ],
  \\"authRequests\\": []
}"
`;

exports[`getRoomsOfUser should return all rooms of logged in user 1`] = `
"{
  \\"rooms\\": [
    {
      \\"creatorId\\": \\"x420@chill\\",
      \\"roomId\\": \\"xDoobkiRoomx\\",
      \\"roomName\\": \\"DoobkiRoom\\",
      \\"users\\": [
        \\"x420@chill\\"
      ]
    },
    {
      \\"creatorId\\": \\"x420@chill\\",
      \\"roomId\\": \\"xJobxxxxxxxx\\",
      \\"roomName\\": \\"Job\\",
      \\"users\\": [
        \\"x420@chill\\"
      ]
    },
    {
      \\"creatorId\\": \\"x420@chill\\",
      \\"roomId\\": \\"xFamilyxxxxx\\",
      \\"roomName\\": \\"Family\\",
      \\"users\\": [
        \\"x420@chill\\"
      ]
    }
  ],
  \\"users\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"email\\": \\"420@chill.com\\",
      \\"username\\": \\"foobar\\"
    }
  ],
  \\"sessions\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"cookie\\": \\"xx420@chill.comxxx\\"
    }
  ],
  \\"wishes\\": [],
  \\"authRequests\\": []
}"
`;

exports[`getRoomsOfUser should return all rooms of logged in user 2`] = `
Array [
  Object {
    "creatorId": "x420@chill",
    "roomId": "xDoobkiRoomx",
    "roomName": "DoobkiRoom",
    "users": Array [
      "x420@chill",
    ],
  },
  Object {
    "creatorId": "x420@chill",
    "roomId": "xJobxxxxxxxx",
    "roomName": "Job",
    "users": Array [
      "x420@chill",
    ],
  },
  Object {
    "creatorId": "x420@chill",
    "roomId": "xFamilyxxxxx",
    "roomName": "Family",
    "users": Array [
      "x420@chill",
    ],
  },
]
`;

exports[`getUsername should return username 1`] = `
"{
  \\"rooms\\": [],
  \\"users\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"email\\": \\"420@chill.com\\",
      \\"username\\": \\"foobar\\"
    }
  ],
  \\"sessions\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"cookie\\": \\"xx420@chill.comxxx\\"
    }
  ],
  \\"wishes\\": [],
  \\"authRequests\\": []
}"
`;

exports[`getWishes should return all wishes of loggedIn user 1`] = `
"{
  \\"rooms\\": [],
  \\"users\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"email\\": \\"420@chill.com\\",
      \\"username\\": null
    }
  ],
  \\"sessions\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"cookie\\": \\"xx420@chill.comxxx\\"
    }
  ],
  \\"wishes\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"wishId\\": \\"xFooxxxx\\",
      \\"title\\": \\"Foo\\",
      \\"description\\": \\"Bar\\",
      \\"isPublic\\": true
    },
    {
      \\"userId\\": \\"x420@chill\\",
      \\"wishId\\": \\"xBarxxxx\\",
      \\"title\\": \\"Bar\\",
      \\"description\\": \\"Foo\\",
      \\"isPublic\\": true
    }
  ],
  \\"authRequests\\": []
}"
`;

exports[`getWishes should return all wishes of loggedIn user 2`] = `
Array [
  Object {
    "description": "Bar",
    "isPublic": true,
    "title": "Foo",
    "userId": "x420@chill",
    "wishId": "xFooxxxx",
  },
  Object {
    "description": "Foo",
    "isPublic": true,
    "title": "Bar",
    "userId": "x420@chill",
    "wishId": "xBarxxxx",
  },
]
`;

exports[`getWishes should return public wishes of user 1`] = `
"{
  \\"rooms\\": [],
  \\"users\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"email\\": \\"420@chill.com\\",
      \\"username\\": \\"FooUser\\"
    }
  ],
  \\"sessions\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"cookie\\": \\"xx420@chill.comxxx\\"
    }
  ],
  \\"wishes\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"wishId\\": \\"xFooxxxx\\",
      \\"title\\": \\"Foo\\",
      \\"description\\": \\"Bar\\",
      \\"isPublic\\": true
    },
    {
      \\"userId\\": \\"x420@chill\\",
      \\"wishId\\": \\"xPrivate\\",
      \\"title\\": \\"Private\\",
      \\"description\\": \\"Foo\\",
      \\"isPublic\\": false
    },
    {
      \\"userId\\": \\"x420@chill\\",
      \\"wishId\\": \\"xBarxxxx\\",
      \\"title\\": \\"Bar\\",
      \\"description\\": \\"Foo\\",
      \\"isPublic\\": true
    },
    {
      \\"userId\\": \\"x420@chill\\",
      \\"wishId\\": \\"xPrivate\\",
      \\"title\\": \\"Private\\",
      \\"description\\": \\"Bar\\",
      \\"isPublic\\": false
    }
  ],
  \\"authRequests\\": []
}"
`;

exports[`getWishes should return public wishes of user 2`] = `
Array [
  Object {
    "description": "Bar",
    "isPublic": true,
    "title": "Foo",
    "userId": "x420@chill",
    "wishId": "xFooxxxx",
  },
  Object {
    "description": "Foo",
    "isPublic": true,
    "title": "Bar",
    "userId": "x420@chill",
    "wishId": "xBarxxxx",
  },
]
`;

exports[`setUsername should set username 1`] = `
"{
  \\"rooms\\": [],
  \\"users\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"email\\": \\"420@chill.com\\",
      \\"username\\": null
    }
  ],
  \\"sessions\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"cookie\\": \\"xx420@chill.comxxx\\"
    }
  ],
  \\"wishes\\": [],
  \\"authRequests\\": []
}"
`;

exports[`setUsername should set username 2`] = `
"{
  \\"rooms\\": [],
  \\"users\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"email\\": \\"420@chill.com\\",
      \\"username\\": \\"foobar\\"
    }
  ],
  \\"sessions\\": [
    {
      \\"userId\\": \\"x420@chill\\",
      \\"cookie\\": \\"xx420@chill.comxxx\\"
    }
  ],
  \\"wishes\\": [],
  \\"authRequests\\": []
}"
`;
